# infra

./: .env.example  docker-compose.yaml
postgres/: Dockerfile  pyproject.toml
postgres-init/: Dockerfile  entrypoint.sh  pyproject.toml
postgres-init/init-db/00-extensions/: extensions.sql
postgres-init/init-db/01-schemas/: schemas.sql
postgres-init/init-db/02-users/: users.sh
postgres-init/init-db/03-functions/: 10-normalize_identifiers.sql
postgres-init/init-db/04-procedures/: 10-auto_update.sql  20-create_embedding_table.sql
postgres-init/init-db/05-tables/00-world/: 10-countries.sql  11-subdivisions.sql  12-cities.sql
postgres-init/init-db/05-tables/10-companies/: 11-sectors.sql  (+6 more)
postgres-init/init-db/06-triggers/: 10-switch_active_embedding_view.sql
postgres-init/init-db/07-data/: seed_embedding_models.sql  seed_sector_classification.sql
postgres/init/: 00-extensions.sql  01-users.sh  02-schemas.sql  10-common.sql  11-embedding_models.sql  12-embedding_registry.sql  13-embedding_utils.sql  20-news_providers.sql  21-news.sql  22-news_summaries.sql  23-news_entities.sql  30-sector_classifications.sql  31-markets.sql  31-sectors.sql  35-companies.sql  36-company_sectors.sql  37-company_locations.sql  40-markets.sql  50-instruments.sql  90-seed_data.sql  99-verify.sql
postgres/init/seeds/: embedding_models.json
postgres/scripts/: build_world.py
redis/: Dockerfile  entrypoint.sh  redis.conf  users.acl.template
redis-init/: Dockerfile  init.py  pyproject.toml
redis-init/scripts/: token_bucket.lua
redis/scripts/: token_bucket.lua
(+10 files in other folders)
