[project]
name = "postgres-init"
version = "0.1.0"
description = "Scripts pour générer les données initiales (S&P500, etc.)"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "pydantic>=2.6.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]